# CPA-Implementation

./: .gitignore  CPA.py  README.md  __init__.py  adversary.py  benchmark.py  chapter_experimental.tex  demo.py  graphs.py  main.py  network.py  node.py  pyproject.toml  test_protocols.py  utils.py
custom_graphs/: CUSTOM_GRAPHS.md  example_graph_adjacency.json  example_graph_detailed.json  example_graph_simple.json  line_graph_5.json
