[project]
name = "cpa-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "Deiadara",email = "nikos@commonprefix.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
