[project]
name = "cpa-implementation"
version = "0.1.0"
description = ""
authors = [
    {name = "Deiadara",email = "nikos@commonprefix.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "A", "C4", "UP", "ARG", "PIE", "T20", "Q", "SIM", "TCH", "TID", "TCH", "ARG", "PIE", "LOG", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
